RESOLVED FIXED256758
REGRESSION(290266@main): [GStreamer] Broke fast/mediastream/captureStream/canvas3d.html
https://bugs.webkit.org/show_bug.cgi?id=256758
Summary REGRESSION(290266@main): [GStreamer] Broke fast/mediastream/captureStream/can...
Philippe Normand
Reported 2023-05-13 07:00:53 PDT
-PASS captureStream with 3d context drawing - not buffered initially -PASS captureStream with 3d context drawing - buffered initially +FAIL captureStream with 3d context drawing - not buffered initially assert_equals: expected "BGRA" but got "RGBA" +FAIL captureStream with 3d context drawing - buffered initially assert_equals: expected "BGRA" but got "RGBA"
Attachments
Philippe Normand
Comment 1 2023-05-14 05:16:24 PDT
EWS
Comment 2 2023-06-16 07:09:54 PDT
Committed 265245@main (b1285c6fa564): <https://commits.webkit.org/265245@main> Reviewed commits have been landed. Closing PR #13863 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-06-16 07:10:16 PDT
Diego Pino
Comment 4 2025-07-04 05:22:46 PDT
This test is failing after 290266@main https://results.webkit.org/?platform=GTK&platform=WPE&&suite=layout-tests&test=fast/mediastream/captureStream/canvas3d.html&limit=4000 ``` https://build.webkit.org/results/WPE-Linux-64-bit-Release-Tests/297019%40main%20%2821728%29/fast/mediastream/captureStream/canvas3d-diff.txt --- /home/buildbot/worker/WPE-Linux-64-bit-Release-Tests/build/layout-test-results/fast/mediastream/captureStream/canvas3d-expected.txt +++ /home/buildbot/worker/WPE-Linux-64-bit-Release-Tests/build/layout-test-results/fast/mediastream/captureStream/canvas3d-actual.txt @@ -1,10 +1,6 @@ -CONSOLE MESSAGE: InvalidStateError: Video element has no video frame -CONSOLE MESSAGE: InvalidStateError: Video element has no video frame -Harness Error (FAIL), message = InvalidStateError: Video element has no video frame +FAIL captureStream with 3d context drawing - not buffered initially assert_equals: expected "BGRA" but got "RGBA" +FAIL captureStream with 3d context drawing - buffered initially assert_equals: expected "BGRA" but got "RGBA" -FAIL captureStream with 3d context drawing - not buffered initially promise_test: Unhandled rejection with value: "no rvfc for 1" -FAIL captureStream with 3d context drawing - buffered initially promise_test: Unhandled rejection with value: "no rvfc for 1" - ```
Philippe Normand
Comment 5 2025-07-04 08:14:01 PDT
EWS
Comment 6 2025-07-07 13:03:00 PDT
Committed 297075@main (c1f6972170d3): <https://commits.webkit.org/297075@main> Reviewed commits have been landed. Closing PR #47610 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.