REGRESSION(263628@main): [GStreamer] Broke fast/mediastream/captureStream/canvas3d.html https://bugs.webkit.org/show_bug.cgi?id=256758

Reviewed by Xabier Rodriguez-Calvar.

Video frame conversions are now performed with the gst_video_convert_sample API which also takes
care of downloading textures from GPU when needed. The test almost passes now in WPE, still one
graphics-related failure to debug. In GTK the test still fails, again due to weak graphics support.

* LayoutTests/platform/gtk/TestExpectations:
* LayoutTests/platform/wpe/fast/mediastream/captureStream/canvas3d-expected.txt: Added.
* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::videoFrameForCurrentTime):
* Source/WebCore/platform/graphics/gstreamer/VideoEncoderGStreamer.cpp:
(WebCore::GStreamerVideoEncoder::encode):
(WebCore::GStreamerInternalVideoEncoder::encode):
* Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.cpp:
(WebCore::convertSampleToImage):
(WebCore::VideoFrame::fromNativeImage):
(WebCore::VideoFrame::createNV12):
(WebCore::VideoFrame::createRGBA):
(WebCore::VideoFrame::createBGRA):
(WebCore::VideoFrame::createI420):
(WebCore::VideoFrameGStreamer::createFromPixelBuffer):
(WebCore::VideoFrame::copyTo):
(WebCore::VideoFrame::paintInContext):
(WebCore::VideoFrameGStreamer::resizedSample):
(WebCore::VideoFrameGStreamer::convert):
(WebCore::VideoFrameGStreamer::downloadSample):
(WebCore::VideoFrameGStreamer::convertToImage):
(WebCore::GstSampleColorConverter::singleton): Deleted.
(WebCore::GstSampleColorConverter::convertSample): Deleted.
(WebCore::GstSampleColorConverter::convertSampleToImage): Deleted.
* Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.h:

Canonical link: https://commits.webkit.org/265245@main