Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.cpp
@@ -37,11 +37,6 @@
 #include <cairo.h>
 #endif
 
-#if USE(GSTREAMER_GL)
-#include <gst/gl/gstglcolorconvert.h>
-#include <gst/gl/gstglmemory.h>
-#endif
-
 GST_DEBUG_CATEGORY(webkit_video_frame_debug);
 #define GST_CAT_DEFAULT webkit_video_frame_debug
 
@@ -60,98 +55,7 @@ RefPtr<VideoFrame> VideoFrame::createFromPixelBuffer(Ref<PixelBuffer>&& pixelBuf
     return RefPtr { VideoFrameGStreamer::createFromPixelBuffer(WTFMove(pixelBuffer), VideoFrameGStreamer::CanvasContentType::Canvas2D, VideoFrame::Rotation::None, MediaTime::invalidTime(), { }, 1, false, { }, WTFMove(colorSpace)) };
 }
 
-class GstSampleColorConverter {
-public:
-    static GstSampleColorConverter& singleton();
-
-    RefPtr<ImageGStreamer> convertSampleToImage(const GRefPtr<GstSample>&);
-    GRefPtr<GstSample> convertSample(const GRefPtr<GstSample>&, const GRefPtr<GstCaps>&, GRefPtr<GstBuffer>&& = nullptr);
-
-private:
-#if USE(GSTREAMER_GL)
-    GRefPtr<GstGLColorConvert> m_glColorConvert;
-#endif
-    GUniquePtr<GstVideoConverter> m_colorConvert;
-    GRefPtr<GstCaps> m_colorConvertInputCaps;
-    GRefPtr<GstCaps> m_colorConvertOutputCaps;
-};
-
-GstSampleColorConverter& GstSampleColorConverter::singleton()
-{
-    ensureVideoFrameDebugCategoryInitialized();
-    static NeverDestroyed<GstSampleColorConverter> sharedInstance;
-    return sharedInstance;
-}
-
-GRefPtr<GstSample> GstSampleColorConverter::convertSample(const GRefPtr<GstSample>& sample, const GRefPtr<GstCaps>& outputCaps, GRefPtr<GstBuffer>&& outputBuffer)
-{
-    auto* buffer = gst_sample_get_buffer(sample.get());
-    if (UNLIKELY(!GST_IS_BUFFER(buffer)))
-        return nullptr;
-
-    auto* caps = gst_sample_get_caps(sample.get());
-
-    GstVideoInfo videoInfo;
-    if (!gst_video_info_from_caps(&videoInfo, caps))
-        return nullptr;
-
-    GST_DEBUG("Converting video frame from %" GST_PTR_FORMAT " to %" GST_PTR_FORMAT, caps, outputCaps.get());
-
-    auto colorConvert = [&]() -> GRefPtr<GstBuffer> {
-        GstVideoInfo outputInfo;
-        if (!gst_video_info_from_caps(&outputInfo, outputCaps.get()))
-            return nullptr;
-
-        if (!m_colorConvertOutputCaps || !gst_caps_is_equal(m_colorConvertOutputCaps.get(), outputCaps.get())
-            || !m_colorConvertInputCaps || !gst_caps_is_equal(m_colorConvertInputCaps.get(), caps)) {
-            m_colorConvert.reset(gst_video_converter_new(&videoInfo, &outputInfo, nullptr));
-            m_colorConvertInputCaps = adoptGRef(gst_caps_copy(caps));
-            m_colorConvertOutputCaps = outputCaps;
-        }
-
-        if (!outputBuffer)
-            outputBuffer = adoptGRef(gst_buffer_new_allocate(nullptr, GST_VIDEO_INFO_SIZE(&outputInfo), nullptr));
-        GstMappedFrame inputFrame(buffer, videoInfo, GST_MAP_READ);
-        GstMappedFrame outputFrame(outputBuffer.get(), outputInfo, GST_MAP_WRITE);
-        gst_video_converter_frame(m_colorConvert.get(), inputFrame.get(), outputFrame.get());
-        return outputBuffer;
-    };
-
-    GRefPtr<GstBuffer> convertedBuffer;
-    auto* memory = gst_buffer_peek_memory(buffer, 0);
-#if USE(GSTREAMER_GL)
-    if (gst_is_gl_memory(memory)) {
-        if (gst_caps_features_contains(gst_caps_get_features(outputCaps.get(), 0), GST_CAPS_FEATURE_MEMORY_GL_MEMORY)) {
-            if (!m_colorConvertInputCaps || !gst_caps_is_equal(m_colorConvertInputCaps.get(), caps)) {
-                m_glColorConvert = adoptGRef(gst_gl_color_convert_new(GST_GL_BASE_MEMORY_CAST(memory)->context));
-                m_colorConvertInputCaps = adoptGRef(gst_caps_copy(caps));
-                m_colorConvertOutputCaps = adoptGRef(gst_caps_copy(outputCaps.get()));
-
-                gst_caps_set_features(m_colorConvertOutputCaps.get(), 0, gst_caps_features_new(GST_CAPS_FEATURE_MEMORY_GL_MEMORY, nullptr));
-                gst_caps_set_simple(m_colorConvertOutputCaps.get(), "texture-target", G_TYPE_STRING, GST_GL_TEXTURE_TARGET_2D_STR, nullptr);
-                if (!gst_gl_color_convert_set_caps(m_glColorConvert.get(), caps, m_colorConvertOutputCaps.get())) {
-                    m_colorConvertInputCaps.clear();
-                    m_colorConvertOutputCaps.clear();
-                    return nullptr;
-                }
-            }
-            convertedBuffer = adoptGRef(gst_gl_color_convert_perform(m_glColorConvert.get(), buffer));
-        } else
-            convertedBuffer = colorConvert();
-    } else
-#endif
-        convertedBuffer = colorConvert();
-
-    if (UNLIKELY(!GST_IS_BUFFER(convertedBuffer.get())))
-        return nullptr;
-
-    const auto* info = gst_sample_get_info(sample.get());
-    auto convertedSample = adoptGRef(gst_sample_new(outputBuffer.get(), m_colorConvertOutputCaps.get(),
-        gst_sample_get_segment(sample.get()), info ? gst_structure_copy(info) : nullptr));
-    return convertedSample;
-}
-
-RefPtr<ImageGStreamer> GstSampleColorConverter::convertSampleToImage(const GRefPtr<GstSample>& sample)
+static RefPtr<ImageGStreamer> convertSampleToImage(const GRefPtr<GstSample>& sample)
 {
     GstVideoInfo videoInfo;
     if (!gst_video_info_from_caps(&videoInfo, gst_sample_get_caps(sample.get())))
@@ -165,7 +69,7 @@ RefPtr<ImageGStreamer> GstSampleColorConverter::convertSampleToImage(const GRefP
     const char* formatString = GST_VIDEO_INFO_HAS_ALPHA(&videoInfo) ? "ARGB" : "xRGB";
 #endif
     auto caps = adoptGRef(gst_caps_new_simple("video/x-raw", "format", G_TYPE_STRING, formatString, "framerate", GST_TYPE_FRACTION, GST_VIDEO_INFO_FPS_N(&videoInfo), GST_VIDEO_INFO_FPS_D(&videoInfo), "width", G_TYPE_INT, GST_VIDEO_INFO_WIDTH(&videoInfo), "height", G_TYPE_INT, GST_VIDEO_INFO_HEIGHT(&videoInfo), nullptr));
-    auto convertedSample = convertSample(sample, caps);
+    auto convertedSample = adoptGRef(gst_video_convert_sample(sample.get(), caps.get(), GST_CLOCK_TIME_NONE, nullptr));
     if (!convertedSample)
         return nullptr;
 
@@ -175,6 +79,9 @@ RefPtr<ImageGStreamer> GstSampleColorConverter::convertSampleToImage(const GRefP
 RefPtr<VideoFrame> VideoFrame::fromNativeImage(NativeImage& image)
 {
 #if USE(CAIRO)
+    ensureVideoFrameDebugCategoryInitialized();
+    GST_TRACE("Creating VideoFrame from native image");
+
     size_t offsets[GST_VIDEO_MAX_PLANES] = { 0, };
     int strides[GST_VIDEO_MAX_PLANES] = { 0, };
 
@@ -209,6 +116,9 @@ static void copyToGstBufferPlane(uint8_t* destination, const GstVideoInfo& info,
 
 RefPtr<VideoFrame> VideoFrame::createNV12(std::span<const uint8_t> span, size_t width, size_t height, const ComputedPlaneLayout& planeY, const ComputedPlaneLayout& planeUV, PlatformVideoColorSpace&& colorSpace)
 {
+    ensureVideoFrameDebugCategoryInitialized();
+    GST_TRACE("Creating VideoFrame from NV12 raw buffer");
+
     GstVideoInfo info;
     gst_video_info_set_format(&info, GST_VIDEO_FORMAT_NV12, width, height);
     fillVideoInfoColorimetryFromColorSpace(&info, colorSpace);
@@ -239,11 +149,15 @@ RefPtr<VideoFrame> VideoFrame::createNV12(std::span<const uint8_t> span, size_t 
 
 RefPtr<VideoFrame> VideoFrame::createRGBA(std::span<const uint8_t> span, size_t width, size_t height, const ComputedPlaneLayout& plane, PlatformVideoColorSpace&& colorSpace)
 {
+    ensureVideoFrameDebugCategoryInitialized();
+    GST_TRACE("Creating VideoFrame from RGBA raw buffer");
     CREATE_RGBA_FRAME(GST_VIDEO_FORMAT_RGBA);
 }
 
 RefPtr<VideoFrame> VideoFrame::createBGRA(std::span<const uint8_t> span, size_t width, size_t height, const ComputedPlaneLayout& plane, PlatformVideoColorSpace&& colorSpace)
 {
+    ensureVideoFrameDebugCategoryInitialized();
+    GST_TRACE("Creating VideoFrame from BGRA raw buffer");
     CREATE_RGBA_FRAME(GST_VIDEO_FORMAT_BGRA);
 }
 
@@ -251,6 +165,8 @@ RefPtr<VideoFrame> VideoFrame::createBGRA(std::span<const uint8_t> span, size_t 
 
 RefPtr<VideoFrame> VideoFrame::createI420(std::span<const uint8_t> span, size_t width, size_t height, const ComputedPlaneLayout& planeY, const ComputedPlaneLayout& planeU, const ComputedPlaneLayout& planeV, PlatformVideoColorSpace&& colorSpace)
 {
+    ensureVideoFrameDebugCategoryInitialized();
+    GST_TRACE("Creating VideoFrame from I420 raw buffer");
     GstVideoInfo info;
     gst_video_info_set_format(&info, GST_VIDEO_FORMAT_I420, width, height);
     fillVideoInfoColorimetryFromColorSpace(&info, colorSpace);
@@ -324,6 +240,8 @@ Ref<VideoFrameGStreamer> VideoFrameGStreamer::createFromPixelBuffer(Ref<PixelBuf
 {
     ensureGStreamerInitialized();
 
+    ensureVideoFrameDebugCategoryInitialized();
+    GST_TRACE("Creating VideoFrame from pixel buffer");
     auto size = pixelBuffer->size();
 
     auto sizeInBytes = pixelBuffer->sizeInBytes();
@@ -368,7 +286,7 @@ Ref<VideoFrameGStreamer> VideoFrameGStreamer::createFromPixelBuffer(Ref<PixelBuf
             "height", G_TYPE_INT, height, "framerate", GST_TYPE_FRACTION, frameRateNumerator, frameRateDenominator, nullptr));
 
         auto inputSample = adoptGRef(gst_sample_new(buffer.get(), caps.get(), nullptr, nullptr));
-        sample = GstSampleColorConverter::singleton().convertSample(inputSample, outputCaps);
+        sample = adoptGRef(gst_video_convert_sample(inputSample.get(), outputCaps.get(), GST_CLOCK_TIME_NONE, nullptr));
         if (sample) {
             auto* outputBuffer = gst_sample_get_buffer(sample.get());
             if (metadata)
@@ -424,6 +342,7 @@ static void copyPlane(uint8_t* destination, const uint8_t* source, uint64_t sour
 
 void VideoFrame::copyTo(std::span<uint8_t> destination, VideoPixelFormat pixelFormat, Vector<ComputedPlaneLayout>&& computedPlaneLayout, CompletionHandler<void(std::optional<Vector<PlaneLayout>>&&)>&& callback)
 {
+    ensureVideoFrameDebugCategoryInitialized();
     GstVideoInfo inputInfo;
     auto sample = downcast<VideoFrameGStreamer>(*this).sample();
     auto* inputBuffer = gst_sample_get_buffer(sample);
@@ -431,6 +350,7 @@ void VideoFrame::copyTo(std::span<uint8_t> destination, VideoPixelFormat pixelFo
     gst_video_info_from_caps(&inputInfo, inputCaps);
     GstMappedFrame inputFrame(inputBuffer, inputInfo, GST_MAP_READ);
 
+    GST_TRACE("Copying frame data to pixel format %d", static_cast<int>(pixelFormat));
     if (pixelFormat == VideoPixelFormat::NV12) {
         auto spanPlaneLayoutY = computedPlaneLayout[0];
         auto widthY = GST_VIDEO_FRAME_COMP_WIDTH(inputFrame.get(), 0);
@@ -517,7 +437,7 @@ void VideoFrame::copyTo(std::span<uint8_t> destination, VideoPixelFormat pixelFo
 
 void VideoFrame::paintInContext(GraphicsContext & context, const FloatRect& destination, const ImageOrientation& destinationImageOrientation, bool shouldDiscardAlpha)
 {
-    auto image = GstSampleColorConverter::singleton().convertSampleToImage(downcast<VideoFrameGStreamer>(*this).sample());
+    auto image = convertSampleToImage(downcast<VideoFrameGStreamer>(*this).sample());
     if (!image)
         return;
 
@@ -540,6 +460,11 @@ uint32_t VideoFrameGStreamer::pixelFormat() const
 
 GRefPtr<GstSample> VideoFrameGStreamer::resizedSample(const IntSize& destinationSize)
 {
+    return convert(static_cast<GstVideoFormat>(pixelFormat()), destinationSize);
+}
+
+GRefPtr<GstSample> VideoFrameGStreamer::convert(GstVideoFormat format, const IntSize& destinationSize)
+{
     auto* caps = gst_sample_get_caps(m_sample.get());
 
     const auto* structure = gst_caps_get_structure(caps, 0);
@@ -551,40 +476,30 @@ GRefPtr<GstSample> VideoFrameGStreamer::resizedSample(const IntSize& destination
 
     GstVideoInfo inputInfo;
     gst_video_info_from_caps(&inputInfo, caps);
-    auto format = GST_VIDEO_INFO_FORMAT(&inputInfo);
+
     auto width = destinationSize.width();
     auto height = destinationSize.height();
-    auto outputCaps = adoptGRef(gst_caps_new_simple("video/x-raw", "format", G_TYPE_STRING, gst_video_format_to_string(format), "width", G_TYPE_INT, width,
-        "height", G_TYPE_INT, height, "framerate", GST_TYPE_FRACTION, frameRateNumerator, frameRateDenominator, nullptr));
-    GstVideoInfo outputInfo;
-    gst_video_info_from_caps(&outputInfo, outputCaps.get());
+    auto outputCaps = adoptGRef(gst_caps_new_simple("video/x-raw", "format", G_TYPE_STRING, gst_video_format_to_string(format), "width", G_TYPE_INT, width, "height", G_TYPE_INT, height, "framerate", GST_TYPE_FRACTION, frameRateNumerator, frameRateDenominator, nullptr));
 
-    auto* buffer = gst_sample_get_buffer(m_sample.get());
-    auto outputBuffer = adoptGRef(gst_buffer_new_allocate(nullptr, GST_VIDEO_INFO_SIZE(&outputInfo), nullptr));
-    {
-        GUniquePtr<GstVideoConverter> converter(gst_video_converter_new(&inputInfo, &outputInfo, nullptr));
-        GstMappedFrame inputFrame(buffer, inputInfo, GST_MAP_READ);
-        GstMappedFrame outputFrame(outputBuffer.get(), outputInfo, GST_MAP_WRITE);
-        gst_video_converter_frame(converter.get(), inputFrame.get(), outputFrame.get());
-    }
+    if (gst_caps_is_equal(caps, outputCaps.get()))
+        return GRefPtr<GstSample>(m_sample);
 
-    double frameRate;
-    gst_util_fraction_to_double(frameRateNumerator, frameRateDenominator, &frameRate);
+    return adoptGRef(gst_video_convert_sample(m_sample.get(), outputCaps.get(), GST_CLOCK_TIME_NONE, nullptr));
+}
 
-    auto presentationTime = this->presentationTime();
-    setBufferFields(outputBuffer.get(), presentationTime, frameRate);
-    return adoptGRef(gst_sample_new(outputBuffer.get(), outputCaps.get(), nullptr, nullptr));
+GRefPtr<GstSample> VideoFrameGStreamer::downloadSample(std::optional<GstVideoFormat> destinationFormat)
+{
+    return convert(destinationFormat.value_or(static_cast<GstVideoFormat>(pixelFormat())), roundedIntSize(presentationSize()));
 }
 
 RefPtr<VideoFrameGStreamer> VideoFrameGStreamer::resizeTo(const IntSize& destinationSize)
 {
-    auto presentationTime = this->presentationTime();
-    return VideoFrameGStreamer::create(resizedSample(destinationSize), destinationSize, presentationTime, rotation(), isMirrored());
+    return VideoFrameGStreamer::create(resizedSample(destinationSize), destinationSize, presentationTime(), rotation(), isMirrored());
 }
 
 RefPtr<ImageGStreamer> VideoFrameGStreamer::convertToImage()
 {
-    return GstSampleColorConverter::singleton().convertSampleToImage(m_sample);
+    return convertSampleToImage(m_sample);
 }
 
 #undef GST_CAT_DEFAULT
